fix instuction window not centred in the screen

--- a/assets/css/howtoplaypage.css
+++ b/assets/css/howtoplaypage.css
@@ -1,4 +1,12 @@
 /* Instruction page */
+.full-page-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
 .instructions-list-container {
   display: flex;
   flex-direction: column;
